--- a/tmux.conf
+++ b/tmux.conf
@@ -1,79 +1,54 @@
+set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m' # italics
+set -g base-index 1
 set -g default-shell $SHELL
 set -g default-terminal "tmux-256color"
-set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION \
-  WINDOWID XAUTHORITY ITERM_PROFILE ITERM_SESSION_ID"
-set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m' # italics
-set -g prefix C-a
-set -g base-index 1
-setw -g pane-base-index 1
-setw -g mode-keys vi
 set -g history-limit 5000
-set -sg escape-time 1
-set -g mouse on
-set -g pane-border-style "fg=green bg=default"
-set -g pane-active-border-style "fg=green bg=default"
 set -g message-style "fg=white bg=black bright"
+set -g mouse on
+set -g pane-active-border-style "fg=green bg=default"
+set -g pane-border-style "fg=green bg=default"
+set -g prefix C-a
+set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY ITERM_PROFILE ITERM_SESSION_ID"
+set -sg escape-time 1
+setw -g mode-keys vi
+setw -g pane-base-index 1
 
-# Status line
-# ------------------------------------------------------------------------------
-set -g status-style "fg=default bg=default"
+# status line
 set -g status-interval 1
 set -g status-left "#[dim][#S #I #P]#[default] "
 set -g status-left-length 30
-set -g status-right-length 100
 set -g status-right "#(tmux-git-info #{pane_current_path})#[default] %a %-d %b %R"
-setw -g window-status-style "fg=default bg=default dim"
+set -g status-right-length 100
+set -g status-style "fg=default bg=default"
 setw -g window-status-current-style "fg=default bg=default bright"
+setw -g window-status-style "fg=default bg=default dim"
 
-# Bindings
-# ------------------------------------------------------------------------------
+# alphabet keys without prefix bindings:
+# a, b, e, g, h, j, k, u, v, y, A, B, C, F, G, N, O, Q, R, S, T, U, V, W, X, Y, Z
 
-# Prefix-unbound alphabet keys
-# a, b, e, g, h, j, k, u, v, y, A, B, C, F, G, N, O, Q, R, S, T, U, V, W, X, Y,
-# Z
+bind-key % split-window -h -c "#{pane_current_path}"
+bind-key '"' split-window -c "#{pane_current_path}"
+bind-key -n C-h run-shell 'tmux-vim-select-pane -L'
+bind-key -n C-j run-shell 'tmux-vim-select-pane -D'
+bind-key -n C-k run-shell 'tmux-vim-select-pane -U'
+bind-key -n C-l run-shell 'tmux-vim-select-pane -R'
+bind-key -n M-k clear-history
+bind-key -n M-l send-keys "C-l"
+bind-key -r C-h select-window -t :-
+bind-key -r C-l select-window -t :+
+bind-key -r H resize-pane -L 10
+bind-key -r I run-shell 'tmux-irb #{pane_current_path}'
+bind-key -r J resize-pane -D 10
+bind-key -r K resize-pane -U 10
+bind-key -r L resize-pane -R 10
+bind-key -r P run-shell 'tmux-psql #{pane_current_path}'
+bind-key -r r source-file ~/.tmux.conf \; display "Reloaded!"
+bind-key C-a send-prefix
+bind-key c new-window -c "#{pane_current_path}"
 
-# Ensure that we can send Ctrl-A to other apps
-bind C-a send-prefix
-
-# Reload the file with Prefix r
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-# Quick window selection
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
-
-# Pane resizing
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
-# Interactive ruby shell pane
-bind -r I run-shell 'tmux-irb #{pane_current_path}'
-
-# Psql
-bind -r P run-shell 'tmux-psql #{pane_current_path}'
-
-# Smart pane switching with awareness of vim splits
-bind -n C-h run-shell 'tmux-vim-select-pane -L'
-bind -n C-j run-shell 'tmux-vim-select-pane -D'
-bind -n C-k run-shell 'tmux-vim-select-pane -U'
-bind -n C-l run-shell 'tmux-vim-select-pane -R'
-
-# Since C-l is used above, bind Option-l to clear screen
-bind -n M-l send-keys "C-l"
-
-bind -n M-k clear-history
-
-# Open new splits and windows in the current working directory
-# http://unix.stackexchange.com/questions/12032
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
-
-# # Colourschemes
-# if-shell "iterm_session_profile | grep Light" "source ~/.tmux/light.conf"
-# if-shell "iterm_session_profile | grep Dark" "source ~/.tmux/dark.conf"
-# if-shell "iterm_session_profile | grep Black" "source ~/.tmux/black.conf"
+# colourschemes
+if-shell "iterm_session_profile | grep Light" "source ~/.tmux/light.conf"
+if-shell "iterm_session_profile | grep Dark" "source ~/.tmux/dark.conf"
+if-shell "iterm_session_profile | grep Black" "source ~/.tmux/black.conf"
 
 run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
