--- a/tmux.conf
+++ b/tmux.conf
@@ -18,7 +18,7 @@ setw -g pane-base-index 1
 set -g status-interval 1
 set -g status-left "#[dim][#S #I #P]#[default] "
 set -g status-left-length 30
-set -g status-right "#(tmux-git-info #{pane_current_path})#[default] %a %-d %b %R"
+set -g status-right "#(tmux-git-info #{pane_current_path})#[default] %a %-d %b %R:%S"
 set -g status-right-length 100
 set -g status-style "fg=default bg=default"
 setw -g window-status-current-style "fg=default bg=default bright"
@@ -47,12 +47,13 @@ bind-key -r L resize-pane -R 10
 bind-key -r M-k clear-history
 bind-key -r M-l send-keys "C-l"
 bind-key -r P run-shell 'tmux-psql #{pane_current_path}'
+bind-key -r | split-window -h -c "#{pane_current_path}"
 bind-key C-a send-prefix
 bind-key c new-window -c "#{pane_current_path}"
+
+unbind Space
 
 # colourschemes
 if-shell "iterm_session_profile | grep Light" "source ~/.tmux/light.conf"
 if-shell "iterm_session_profile | grep Dark" "source ~/.tmux/dark.conf"
 if-shell "iterm_session_profile | grep Black" "source ~/.tmux/black.conf"
-
-run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
