--- a/tmux.conf
+++ b/tmux.conf
@@ -9,7 +9,7 @@ set -g pane-active-border-style "fg=white bg=default"
 set -g pane-border-style "fg=white bg=default"
 set -g prefix C-a
 set -g renumber-windows on
-set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY ITERM_PROFILE ITERM_SESSION_ID"
+set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
 set -sg escape-time 1
 setw -g mode-keys vi
 setw -g monitor-activity on
@@ -56,6 +56,7 @@ bind-key c new-window -c "#{pane_current_path}"
 unbind Space
 
 # colourschemes
-if-shell "iterm_session_profile | grep Light" "source ~/.tmux/light.conf"
-if-shell "iterm_session_profile | grep Dark" "source ~/.tmux/dark.conf"
-if-shell "iterm_session_profile | grep Black" "source ~/.tmux/black.conf"
+# TODO hook to run these too
+if-shell "iterm current_profile | grep Light" "source ~/.tmux/light.conf"
+if-shell "iterm current_profile | grep Dark" "source ~/.tmux/dark.conf"
+if-shell "iterm current_profile | grep Black" "source ~/.tmux/black.conf"
