--- a/tmux.conf
+++ b/tmux.conf
@@ -5,8 +5,8 @@ set -g default-terminal "tmux-256color"
 set -g history-limit 5000
 set -g message-style "fg=white bg=black bright"
 set -g mouse on
-set -g pane-active-border-style "fg=default bg=default"
-set -g pane-border-style "fg=default bg=default"
+set -g pane-active-border-style "fg=white bg=default"
+set -g pane-border-style "fg=white bg=default"
 set -g prefix C-a
 set -g renumber-windows on
 set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY ITERM_PROFILE ITERM_SESSION_ID"
