--- a/tmux.conf
+++ b/tmux.conf
@@ -5,8 +5,8 @@ set -g default-terminal "tmux-256color"
 set -g history-limit 5000
 set -g message-style "fg=white bg=black bright"
 set -g mouse on
-set -g pane-active-border-style "fg=white bg=default"
-set -g pane-border-style "fg=white bg=default"
+set -g pane-active-border-style "fg=default default"
+set -g pane-border-style "fg=default default"
 set -g prefix C-a
 set -g renumber-windows on
 set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
@@ -14,7 +14,7 @@ set -sg escape-time 1
 setw -g mode-keys vi
 setw -g monitor-activity on
 setw -g pane-base-index 1
-setw -g window-status-activity-style "bg=colour005 fg=white italics"
+setw -g window-status-activity-style "italics"
 
 # status line
 set -g status-interval 1
@@ -22,9 +22,8 @@ set -g status-left "#[dim][#S]#[default] "
 set -g status-left-length 30
 set -g status-right "#(tmux-git-info #{pane_current_path})#[default] %a %-d %b %R:%S"
 set -g status-right-length 100
-set -g status-style "fg=default bg=default"
-setw -g window-status-current-style "fg=default bg=default bright"
-setw -g window-status-style "fg=default bg=default dim italics"
+setw -g window-status-current-style "fg=default bg=default"
+setw -g window-status-style "dim italics"
 
 # alphabet keys without prefix bindings:
 # a, b, e, g, h, j, k, u, v, y, A, B, C, F, G, N, O, Q, R, S, T, U, V, W, X, Y, Z
