--- a/tmux/black.conf
+++ b/tmux/black.conf
@@ -1,4 +1,6 @@
 # Black colourscheme
 
-setw -g window-status-current-style "fg=default bg=colour241 bright"
-set -g status-style "fg=default bg=black"
+set -g pane-active-border-style "fg=green"
+set -g pane-border-style "fg=green"
+set -g status-style "bg=black"
+setw -g window-status-current-style "fg=black bg=green bright"
