--- a/tmux/dark.conf
+++ b/tmux/dark.conf
@@ -1,4 +1,6 @@
 # Dark colourscheme
 
-setw -g window-status-current-style "fg=default bg=black bright"
-set -g status-style "fg=default bg=black"
+set -g pane-active-border-style "fg=black"
+set -g pane-border-style "fg=black"
+set -g status-style "bg=black"
+setw -g window-status-current-style "fg=colour231 bg=magenta bright"
