--- a/tmux/light.conf
+++ b/tmux/light.conf
@@ -1,4 +1,6 @@
 # Light colourscheme
 
-setw -g window-status-current-style 'fg=white bg=colour010 bright'
-set -g status-style "fg=default bg=white"
+set -g pane-active-border-style "fg=white"
+set -g pane-border-style "fg=white"
+set -g status-style "bg=white"
+setw -g window-status-current-style "fg=colour231 bg=magenta bright"
