--- a/tmux/dark.conf
+++ b/tmux/dark.conf
@@ -2,5 +2,5 @@
 
 set -g pane-active-border-style "fg=black"
 set -g pane-border-style "fg=black"
-set -g status-style "bg=black"
-setw -g window-status-current-style "fg=colour231 bg=magenta bright"
+set -g status-style "fg=default bg=black"
+setw -g window-status-current-style "fg=default bg=black bright"
