--- a/tmux.conf
+++ b/tmux.conf
@@ -37,7 +37,7 @@ bind-key -n C-k run-shell 'tmux-vim-select-pane -U'
 bind-key -n C-l run-shell 'tmux-vim-select-pane -R'
 bind-key -n M-k clear-history
 bind-key -n M-l send-keys "C-l"
-bind-key -n M-r source-file ~/.tmux.conf \; display "Reloaded!"
+bind-key -n M-r source-file ~/.tmux.conf
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 bind-key -r H resize-pane -L 10
