--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,7 @@ set -g mouse on
 set -g pane-active-border-style "fg=default default"
 set -g pane-border-style "fg=default default"
 set -g prefix C-a
+set -g prefix2 C-Space
 set -g renumber-windows on
 set -g status-interval 1
 set -g status-left "#[dim][#S]#[default] "
@@ -44,6 +45,7 @@ bind-key -r M-l send-keys "C-l"
 bind-key -r P run-shell 'tmux-psql #{pane_current_path}'
 bind-key -r | split-window -h -c "#{pane_current_path}"
 bind-key C-a send-prefix
+bind-key C-Space send-prefix -2
 bind-key c new-window -c "#{pane_current_path}"
 
 unbind Space
