--- a/tmux.conf
+++ b/tmux.conf
@@ -13,7 +13,7 @@ set -g renumber-windows on
 set -g status-interval 1
 set -g status-left "#[dim][#S]#[default] "
 set -g status-left-length 30
-set -g status-right "#(tmux-git-info #{pane_current_path})#[default] %a %-d %b %R:%S"
+set -g status-right "#(tmux-git-info \"#{pane_current_path}\") %a %-d %b %R:%S"
 set -g status-right-length 100
 set -g update-environment "DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
 set -sg escape-time 1
