--- a/tmux.conf
+++ b/tmux.conf
@@ -50,6 +50,4 @@ bind-key c new-window -c "#{pane_current_path}"
 
 unbind Space
 
-if-shell "iterm current_profile | grep Light" "source ~/.tmux/light.conf"
-if-shell "iterm current_profile | grep Dark" "source ~/.tmux/dark.conf"
-if-shell "iterm current_profile | grep Black" "source ~/.tmux/black.conf"
+run-shell "tmux-apply-colorscheme"
