--- a/tmux.conf
+++ b/tmux.conf
@@ -48,4 +48,4 @@ bind-key c new-window -c "#{pane_current_path}"
 
 unbind Space
 
-run-shell "tmux-apply-colorscheme"
+run-shell "tmux-apply-colorscheme Solarized Light"
