--- a/tmux.conf
+++ b/tmux.conf
@@ -35,6 +35,8 @@ bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 bind-key -r H resize-pane -L 10
 bind-key -r I run-shell 'tmux-irb #{pane_current_path}'
+bind-key -r N run-shell 'tmux-node #{pane_current_path}'
+bind-key -r S run-shell 'tmux-scratch #{pane_current_path}'
 bind-key -r J resize-pane -D 10
 bind-key -r K resize-pane -U 10
 bind-key -r L resize-pane -R 10
