--- a/.gitmodules
+++ b/.gitmodules
@@ -125,3 +125,6 @@
 [submodule "vim/bundle/iceberg"]
 	path = vim/pack/bundle/start/iceberg
 	url = https://github.com/cocopon/iceberg.vim.git
+[submodule "config/alacritty/tokyo-night-alacritty-theme"]
+	path = config/alacritty/tokyo-night-alacritty-theme
+	url = git@github.com:zatchheems/tokyo-night-alacritty-theme.git
