--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
-.vimswap/
-.vimtmp/
-.vimundo/
 vim/.netrwhist
-vim/whims.vim
 tags
 tmux/resurrect
 tags-*
 bin/monotonic-clock
-config/nvim/lazy-lock.json
+config/nvim.reentim/lazy-lock.json
+config/nvim.chad/lazy-lock.json
 config/alacritty/profile.toml
