--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,7 @@ set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m' # italics
 set -g base-index 1
 set -g default-shell $SHELL
 set -g default-terminal "tmux-256color"
+set -g focus-events on
 set -g history-limit 5000
 set -g mouse on
 set -g pane-active-border-style "fg=default default"
