--- a/.gitmodules
+++ b/.gitmodules
@@ -131,3 +131,6 @@
 [submodule "config/alacritty/alacritty-theme"]
 	path = config/alacritty/alacritty-theme
 	url = git@github.com:alacritty/alacritty-theme.git
+[submodule "zsh/func/zsh-nvm"]
+	path = zsh/func/zsh-nvm
+	url = https://github.com/lukechilds/zsh-nvm.git
